added tests and module for bayes

--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,5 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
+# Genders: {"male"=>0, "female"=>1}
 one:
   height: 1
   weight: 1
