--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -1,11 +1,51 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-# Genders: {"male"=>0, "female"=>1}
+
+#gender,height,weight
+#male,600,180
+#male,592,190
+#male,558,170
+#male,592,165
+#female,500,100
+#female,550,150
+#female,542,130
+#female,575,150
+
 one:
-  height: 1
-  weight: 1
-  gender: 1
+  height: 600
+  weight: 180
+  gender: 0
 
 two:
-  height: 1
-  weight: 1
+  height: 592
+  weight: 180
+  gender: 0
+
+three:
+  height: 558
+  weight: 170
+  gender: 0
+
+four:
+  height: 592
+  weight: 165
+  gender: 0
+
+five:
+  height: 500
+  weight: 100
+  gender: 1
+
+six:
+  height: 550
+  weight: 150
+  gender: 1
+
+seven:
+  height: 542
+  weight: 130
+  gender: 1
+
+eight:
+  height: 575
+  weight: 150
   gender: 1
